# kvitteringsscanning

./: README.md  api.ts
centric-ner/: .gitignore  Dockerfile  Pipfile  README.md  case-foodCompany.md  check_updates.py  compile_proto.sh  parse_quantities.py  requirements.txt  tradesolution_to_ingredients.py  x-installer.bash
centric-ner/sample_data/: case_noneFoodItems.txt  case_normalizeProductNames.txt  case_splitProductAndVolumenNormalizeName.txt  openfoodfacts_export.txt
centric-ner/sample_data/kassalappen/: categories.json  non_food_categories.json
centric-ner/sample_data/matvareTabellen/: README.md  food-groups_en.json  food-groups_no.json  langual.json  nutrients_en.json
centric-ner/src/: .pylintrc  main.py
centric-ner/src/api/: Cargo.toml  README.md  build.rs
centric-ner/src/api/proto/: ner.proto  ner_pb2.py  ner_pb2_grpc.py
centric-ner/src/api/src/: client.rs  server.rs
centric-ner/src/classification/: DatasetBuilder.py  PhraseMatcher.py
centric-ner/src/foodNer/: .pylintrc  ClassifyEntry.py  ClassifyNonStandardUnits.py  MatchedEntry.py  PredictedProduct.py  ProductAmount.py  README.md  ShapeUnitClassification.py  bugs-EntityRecognizer.py  fixme.md  future-code.py.txt  future.md  res-classifyEntries.txt  res-foodFacts.txt  x-foodFacts.py
centric-ner/src/kassalappen/: filter.py  parser.py
centric-ner/src/loadData/: LoadData.py  Matvaretabellen.py  res_Matvaretabellen.txt  x-autoGenerate-MatchedLabel-enums.py
centric-ner/src/old/: tut-callback.py  (+1 more)
rust-api/: README.txt  endpoint.rs  prediction.rs  product_search.rs  scan_receipt.proto
(+51 files in other folders)
